--- a/01_hello_vr_world/index.html
+++ b/01_hello_vr_world/index.html
@@ -8,10 +8,61 @@
   <body>
     <!-- a scene with a sphere, a box, a cylinder, a plane, and a sky  -->
     <a-scene>
-       <a-sphere position="0 1.25 -1" radius="1.25" color="#EF2D5E"></a-sphere>
-       <a-box position="-1 0.5 1" rotation="0 45 0" width="1" height="1" depth="1" color="#4CC3D9"></a-box>
-       <a-cylinder position="1 0.75 1" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-       <a-plane rotation="-90 0 0" width="4" height="4" src="vr.jpg"></a-plane>
+
+    
+
+      Sphere Reihe -2
+       <a-sphere position="-2 5 1" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="-2 4 0.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="-2 3 0" radius="0.25" color="#EF2D5E"></a-sphere>
+       <a-sphere position="-2 2 -0.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="-2 1 -1" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="-2 0 -1.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="-2 -1 -2" radius="0.25" color="#9df99d"></a-sphere>
+       <a-sphere position="-2 -2 -2.5" radius="0.25" color="#0d510d"></a-sphere>
+
+      Sphere Reihe -1
+       <a-sphere position="-1 5 0.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="-1 4 0" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="-1 3 -0.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="-1 2 -1" radius="0.25" color="#EF2D5E"></a-sphere>
+       <a-sphere position="-1 1 -1.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="-1 0 -2" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="-1 -1 -2.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="-1 -2 -3" radius="0.25" color="#9df99d"></a-sphere>
+
+      Sphere Reihe 1
+       <a-sphere position="0 5 1" radius="0.25" color="#9df99d"></a-sphere>
+       <a-sphere position="0 4 0.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="0 3 0" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="0 2 -0.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="0 1 -1" radius="0.25" color="#EF2D5E"></a-sphere>
+       <a-sphere position="0 0 -1.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="0 -1 -2" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="0 -2 -2.5" radius="0.25" color="#0d510d"></a-sphere>
+
+Sphere Reihe 2
+       <a-sphere position="1 5 0.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="1 4 0" radius="0.25" color="#9df99d"></a-sphere>
+       <a-sphere position="1 3 -0.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="1 2 -1" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="1 1 -1.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="1 0 -2" radius="0.25" color="#EF2D5E"></a-sphere>
+       <a-sphere position="1 -1 -2.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="1 -2 -3" radius="0.25" color="#0d510d"></a-sphere>
+
+Sphere Reihe 3
+       <a-sphere position="2 5 1" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="2 4 0.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="2 3 0" radius="0.25" color="#9df99d"></a-sphere>
+       <a-sphere position="2 2 -0.5" radius="0.25" color="#0d510d"></a-sphere>
+       <a-sphere position="2 1 -1" radius="0.25" color="#2acb2a"></a-sphere>
+       <a-sphere position="2 0 -1.5" radius="0.25" color="#539853"></a-sphere>
+       <a-sphere position="2 -1 -2" radius="0.25" color="#EF2D5E"></a-sphere>
+       <a-sphere position="2 -2 -2.5" radius="0.25" color="#539853"></a-sphere>
+
+
+       
        <a-sky color="#030303"></a-sky>
        <a-entity position="0 0 3.8">
          <a-camera></a-camera>
